[gd_scene load_steps=17 format=2]

[ext_resource path="res://hearts_ui_controller.gd" type="Script" id=1]
[ext_resource path="res://spike.gd" type="Script" id=2]
[ext_resource path="res://network_game.gd" type="Script" id=3]
[ext_resource path="res://question_manager.gd" type="Script" id=4]
[ext_resource path="res://Assets/door.png" type="Texture" id=5]
[ext_resource path="res://Scenes/HeartPickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/castle_tileset.tres" type="TileSet" id=8]
[ext_resource path="res://item_spawn_point.gd" type="Script" id=9]
[ext_resource path="res://Assets/tileset.png" type="Texture" id=10]
[ext_resource path="res://InGameMenu.gd" type="Script" id=11]
[ext_resource path="res://GameUI.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 6 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="QuestionManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="SpawnPositions" type="Node" parent="."]

[node name="ItemSpawnPoint" type="Position2D" parent="SpawnPositions" groups=[
"spawn_position",
]]
position = Vector2( 88, 105 )
script = ExtResource( 9 )

[node name="ItemSpawnPoint2" type="Position2D" parent="SpawnPositions" groups=[
"spawn_position",
]]
position = Vector2( 184, 248 )
script = ExtResource( 9 )

[node name="ItemSpawnPoint3" type="Position2D" parent="SpawnPositions" groups=[
"spawn_position",
]]
position = Vector2( 376, 136 )
script = ExtResource( 9 )

[node name="ItemSpawnPoint4" type="Position2D" parent="SpawnPositions" groups=[
"spawn_position",
]]
position = Vector2( 264, 72 )
script = ExtResource( 9 )

[node name="ItemSpawnPoint5" type="Position2D" parent="SpawnPositions" groups=[
"spawn_position",
]]
position = Vector2( 440, 56 )
script = ExtResource( 9 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 13, 0, 65546, 13, 0, 65547, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 65554, 13, 0, 65555, 13, 0, 65556, 13, 0, 65557, 13, 0, 65558, 13, 0, 65559, 13, 0, 65560, 13, 0, 65561, 13, 0, 65562, 13, 0, 65563, 13, 0, 65564, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 13, 0, 131093, 13, 0, 131094, 13, 0, 131095, 13, 0, 131096, 13, 0, 131097, 13, 0, 131098, 13, 0, 131099, 13, 0, 131100, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 14, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 14, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 13, 0, 196629, 13, 0, 196630, 13, 0, 196631, 13, 0, 196632, 13, 0, 196633, 13, 0, 196634, 13, 0, 196635, 14, 0, 196636, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 13, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 13, 0, 262158, 13, 0, 262159, 13, 0, 262160, 13, 0, 262161, 13, 0, 262162, 13, 0, 262163, 13, 0, 262164, 13, 0, 262165, 13, 0, 262166, 13, 0, 262167, 13, 0, 262168, 13, 0, 262169, 13, 0, 262170, 13, 0, 262171, 13, 0, 262172, 13, 0, 327681, 13, 0, 327682, 13, 0, 327683, 13, 0, 327684, 14, 0, 327685, 13, 0, 327686, 13, 0, 327687, 13, 0, 327688, 13, 0, 327689, 13, 0, 327690, 13, 0, 327691, 13, 0, 327692, 13, 0, 327693, 13, 0, 327694, 13, 0, 327695, 13, 0, 327696, 13, 0, 327697, 13, 0, 327698, 13, 0, 327699, 13, 0, 327700, 14, 0, 327701, 13, 0, 327702, 13, 0, 327703, 13, 0, 327704, 13, 0, 327705, 13, 0, 327706, 13, 0, 327707, 13, 0, 327708, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 393224, 13, 0, 393225, 13, 0, 393226, 13, 0, 393227, 13, 0, 393228, 13, 0, 393229, 13, 0, 393230, 13, 0, 393231, 13, 0, 393232, 13, 0, 393233, 13, 0, 393234, 13, 0, 393235, 13, 0, 393236, 13, 0, 393237, 13, 0, 393238, 13, 0, 393239, 13, 0, 393240, 13, 0, 393241, 13, 0, 393242, 13, 0, 393243, 13, 0, 393244, 13, 0, 458753, 15, 0, 458754, 15, 0, 458755, 15, 0, 458760, 13, 0, 458761, 13, 0, 458762, 13, 0, 458763, 14, 0, 458764, 13, 0, 458765, 13, 0, 458766, 13, 0, 458767, 13, 0, 458768, 13, 0, 458769, 13, 0, 458770, 13, 0, 458771, 13, 0, 458772, 13, 0, 458773, 13, 0, 458774, 13, 0, 458775, 13, 0, 458776, 13, 0, 458777, 13, 0, 458778, 13, 0, 458779, 13, 0, 458780, 13, 0, 524289, 15, 0, 524290, 15, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 524302, 13, 0, 524303, 13, 0, 524304, 13, 0, 524305, 14, 0, 524306, 13, 0, 524307, 13, 0, 524308, 13, 0, 524309, 13, 0, 524310, 13, 0, 524311, 13, 0, 524312, 13, 0, 524313, 13, 0, 524314, 13, 0, 524315, 13, 0, 524316, 13, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 15, 0, 589829, 16, 0, 589830, 15, 0, 589832, 13, 0, 589833, 13, 0, 589834, 13, 0, 589835, 13, 0, 589836, 13, 0, 589837, 13, 0, 589838, 13, 0, 589839, 13, 0, 589840, 13, 0, 589841, 13, 0, 589842, 13, 0, 589843, 13, 0, 589844, 13, 0, 589845, 13, 0, 589846, 13, 0, 589847, 13, 0, 589848, 13, 0, 589849, 13, 0, 589850, 13, 0, 589851, 13, 0, 589852, 13, 0, 655365, 15, 0, 655366, 15, 0, 655368, 13, 0, 655369, 13, 0, 655370, 13, 0, 655371, 13, 0, 655372, 13, 0, 655373, 13, 0, 655374, 13, 0, 655375, 13, 0, 655376, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 13, 0, 720897, 15, 0, 720898, 15, 0, 720899, 16, 0, 720900, 15, 0, 720901, 15, 0, 720902, 15, 0, 720909, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 14, 0, 720923, 13, 0, 720924, 13, 0, 786433, 15, 0, 786434, 16, 0, 786435, 15, 0, 786436, 15, 0, 786437, 15, 0, 786438, 15, 0, 786440, 15, 0, 786441, 15, 0, 786442, 15, 0, 786443, 15, 0, 786444, 15, 0, 786445, 13, 0, 786446, 13, 0, 786447, 13, 0, 786448, 13, 0, 786449, 13, 0, 786450, 13, 0, 786451, 13, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 851969, 15, 0, 851970, 15, 0, 851971, 15, 0, 851972, 15, 0, 851973, 15, 0, 851974, 15, 0, 851975, 15, 0, 851976, 15, 0, 851977, 15, 0, 851978, 15, 0, 851979, 16, 0, 851980, 15, 0, 851981, 13, 0, 851982, 13, 0, 851983, 13, 0, 851984, 13, 0, 851985, 13, 0, 851986, 13, 0, 851987, 13, 0, 851988, 13, 0, 851989, 13, 0, 851990, 13, 0, 851991, 13, 0, 851992, 13, 0, 851993, 13, 0, 851994, 13, 0, 851995, 13, 0, 851996, 13, 0, 917508, 15, 0, 917509, 15, 0, 917510, 16, 0, 917511, 15, 0, 917512, 15, 0, 917513, 15, 0, 917514, 15, 0, 917515, 15, 0, 917516, 15, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 14, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 13, 0, 917529, 13, 0, 917530, 13, 0, 917531, 13, 0, 917532, 13, 0, 983044, 15, 0, 983045, 15, 0, 983046, 15, 0, 983047, 15, 0, 983048, 15, 0, 983049, 15, 0, 983051, 15, 0, 983052, 15, 0, 983053, 13, 0, 983054, 13, 0, 983055, 13, 0, 983056, 13, 0, 983057, 13, 0, 983058, 13, 0, 983059, 13, 0, 983060, 13, 0, 983061, 13, 0, 983062, 13, 0, 983065, 13, 0, 983066, 13, 0, 983067, 13, 0, 983068, 13, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 8, 11, 0, 9, 0, 0, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 11, 0, 14, 11, 0, 15, 11, 0, 16, 0, 0, 17, 11, 0, 18, 0, 0, 19, 11, 0, 20, 11, 0, 21, 11, 0, 22, 11, 0, 23, 11, 0, 24, 11, 0, 25, 11, 0, 26, 11, 0, 27, 0, 0, 28, 11, 0, 29, 0, 0, 65536, 0, 0, 65547, 6, 0, 65549, 11, 0, 65552, 4, 0, 65565, 0, 0, 131072, 0, 0, 131085, 11, 0, 131088, 3, 0, 131101, 19, 0, 196608, 0, 0, 196621, 0, 0, 196624, 3, 0, 196637, 0, 0, 262144, 0, 0, 262160, 2, 0, 262167, 1, 0, 262168, 8, 0, 262169, 10, 0, 262170, 17, 0, 262171, 0, 0, 262172, 17, 0, 262173, 0, 0, 327680, 19, 0, 327689, 8, 0, 327690, 0, 0, 327691, 11, 0, 327692, 11, 0, 327693, 11, 0, 327694, 11, 0, 327695, 11, 0, 327696, 11, 0, 327697, 11, 0, 327698, 0, 0, 327699, 7, 0, 327709, 0, 0, 393216, 19, 0, 393245, 19, 0, 458752, 0, 0, 458755, 8, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 19, 0, 458773, 1, 0, 458776, 5, 0, 458781, 19, 0, 524288, 0, 0, 524289, 7, 0, 524295, 0, 0, 524312, 2, 0, 524317, 0, 0, 589824, 0, 0, 589831, 0, 0, 589834, 4, 0, 589847, 0, 0, 589848, 0, 0, 589852, 8, 0, 589853, 19, 0, 655360, 0, 0, 655361, 0, 0, 655362, 19, 0, 655363, 0, 0, 655364, 0, 0, 655367, 0, 0, 655370, 2, 0, 655389, 0, 0, 720896, 0, 0, 720903, 19, 0, 720904, 11, 0, 720905, 11, 0, 720906, 11, 0, 720907, 11, 0, 720908, 0, 0, 720909, 7, 0, 720910, 1, 0, 720917, 4, 0, 720924, 8, 0, 720925, 0, 0, 786432, 19, 0, 786437, 1, 0, 786438, 8, 0, 786439, 0, 0, 786442, 4, 0, 786448, 1, 0, 786449, 1, 0, 786452, 0, 0, 786453, 0, 0, 786461, 19, 0, 851968, 0, 0, 851978, 3, 0, 851996, 8, 0, 851997, 0, 0, 917504, 0, 0, 917505, 11, 0, 917506, 11, 0, 917507, 12, 0, 917514, 2, 0, 917520, 1, 0, 917521, 1, 0, 917527, 4, 0, 917533, 0, 0, 983040, 0, 0, 983041, 11, 0, 983042, 11, 0, 983043, 12, 0, 983050, 0, 0, 983063, 10, 0, 983064, 12, 0, 983068, 8, 0, 983069, 19, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048583, 11, 0, 1048584, 11, 0, 1048585, 11, 0, 1048586, 11, 0, 1048587, 11, 0, 1048588, 11, 0, 1048589, 11, 0, 1048590, 11, 0, 1048591, 11, 0, 1048592, 11, 0, 1048593, 11, 0, 1048594, 11, 0, 1048595, 11, 0, 1048596, 11, 0, 1048597, 11, 0, 1048598, 11, 0, 1048599, 11, 0, 1048600, 11, 0, 1048601, 11, 0, 1048602, 11, 0, 1048603, 11, 0, 1048604, 11, 0, 1048605, 0, 0 )

[node name="MapObjects" type="Node" parent="."]

[node name="Spike" type="Area2D" parent="MapObjects" groups=[
"danger",
]]
position = Vector2( 328, 248 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="MapObjects/Spike"]
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 32, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Spike"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Spike2" type="Area2D" parent="MapObjects" groups=[
"danger",
]]
position = Vector2( 136, 168 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="MapObjects/Spike2"]
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 32, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Spike2"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Door" type="Area2D" parent="MapObjects"]
position = Vector2( 408, 56 )

[node name="Sprite" type="Sprite" parent="MapObjects/Door"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Door"]
shape = SubResource( 2 )

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="TopCont" type="Control" parent="GameUI"]
anchor_right = 1.0
margin_left = 16.0
margin_right = -16.0
margin_bottom = 14.0

[node name="ScoreLabel" type="Label" parent="GameUI/TopCont"]
margin_right = 61.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="GameUI/TopCont"]
margin_left = 133.0
margin_right = 225.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Time Left: 60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordsLeft" type="Label" parent="GameUI/TopCont"]
margin_left = 241.0
margin_right = 344.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Words Left: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartsContainer" type="HBoxContainer" parent="GameUI/TopCont"]
margin_left = 360.0
margin_right = 360.0
margin_bottom = 14.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="GameUI/TopCont"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -10.0
margin_bottom = 10.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideCont" type="MarginContainer" parent="GameUI"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -50.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectedWords" type="ItemList" parent="GameUI/SideCont"]
margin_right = 40.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomCont" type="MarginContainer" parent="GameUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameUI/BottomCont"]
margin_right = 480.0
margin_bottom = 48.0
color = Color( 0, 0, 0, 1 )

[node name="QuestionText" type="RichTextLabel" parent="GameUI/BottomCont/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]This is a [b]question[/b] for you to answer!
[color=yellow]Here[/color] it is on the [b]second line[/b]."
text = "This is a question for you to answer!
Here it is on the second line."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPanel" type="Panel" parent="GameUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="GameUI/GameOverPanel"]
margin_right = 120.0
margin_bottom = 20.0
text = "Game Over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameUI/GameOverPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5
text = "Your score was:
0"
align = 1
autowrap = true

[node name="TryAgainButton" type="Button" parent="GameUI/GameOverPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
text = "Try Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundOverPanel" type="Panel" parent="GameUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoresLabel" type="Label" parent="GameUI/RoundOverPanel"]
margin_right = 168.0
margin_bottom = 20.0
text = "Scores"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScores" type="ItemList" parent="GameUI/RoundOverPanel"]
margin_left = 8.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyCountdown" type="Button" parent="GameUI/RoundOverPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
text = "Ready (15)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPanel" type="Panel" parent="GameUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="GameUI/StartPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameMenu" type="PopupMenu" parent="GameUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartPickup" parent="." instance=ExtResource( 6 )]
position = Vector2( 216, 72 )

[node name="PlayerStartPosition" type="Position2D" parent="."]
position = Vector2( 264, 248 )

[node name="Players" type="Node" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="MapObjects/Spike" to="MapObjects/Spike" method="_on_Spike_body_entered"]
[connection signal="body_entered" from="MapObjects/Spike2" to="MapObjects/Spike2" method="_on_Spike_body_entered"]
[connection signal="pressed" from="GameUI/TopCont/MenuButton" to="GameUI" method="_on_MenuButton_pressed"]
[connection signal="button_up" from="GameUI/GameOverPanel/TryAgainButton" to="." method="_on_TryAgainButton_button_up"]
[connection signal="button_up" from="GameUI/RoundOverPanel/ReadyCountdown" to="." method="_on_TryAgainButton_button_up"]
[connection signal="button_up" from="GameUI/StartPanel/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="id_pressed" from="GameUI/InGameMenu" to="GameUI/InGameMenu" method="_on_InGameMenu_id_pressed"]
